# OnlineLearningProject

./: README.md  data_loader.py  pyproject.toml  tp1_related.ipynb  tp2_related.ipynb  tp3_related.ipynb  tp4_related.ipynb  tp5_related.ipynb  utils.py
models/: cnn_improved.py  cnn_simple.py
